@@ -402,6 +402,11 @@ feh_event_handle_ConfigureNotify(XEvent * ev)
             w->w = ev->xconfigure.width;
             w->h = ev->xconfigure.height;
             w->had_resize = 1;
+            if (opt.geom)
+            {
+               opt.geom_w = w->w;
+               opt.geom_h = w->h;
+            }
             winwidget_render_image(w, 0, 1);
          }
       }
@@ -470,8 +475,8 @@ feh_event_handle_MotionNotify(XEvent * ev)
          selected_item = feh_menu_find_selected(m);
          mouseover_item =
             feh_menu_find_at_xy(m, ev->xmotion.x, ev->xmotion.y);
-	 
-	 if (selected_item != mouseover_item)
+
+         if (selected_item != mouseover_item)
          {
             D(4, ("selecting a menu item\n"));
             if (selected_item)
@@ -481,35 +486,33 @@ feh_event_handle_MotionNotify(XEvent * ev)
                     || (mouseover_item->func_gen_sub)))
                feh_menu_select(m, mouseover_item);
          }
-	 /* check if we are close to the right and/or the bottom edge of the
-	  * screen. If so, and if the menu we are currently over is partially
-	  * hidden, slide the menu to the left and/or up until it is
-	  * fully visible */
-	 if ( mouseover_item && (
-	      (scr->width - (ev->xmotion.x + m->x)) < 50 ||
-              (scr->height -(ev->xmotion.y + m->y)) < 50)
-	    )
-	 {
-	    dx = scr->width - (m->x + m->w);
-	    dy = scr->height - (m->y + m->h);
-	    dx = dx<0?dx:0;
-	    dy = dy<0?dy:0;
-	    if (dx || dy)
-	       feh_menu_slide_all_menus_relative(dx, dy);
-	 }
-	 /* if a submenu is open we want to see that also */
-	 if (mouseover_item && m->next && (
-	        (scr->width - (ev->xmotion.x + m->next->x)) < 50 ||
-		(scr->height -(ev->xmotion.y + m->next->y)) < 50)
-	    )
-	 {
-	    dx = scr->width - (m->next->x + m->next->w);
-	    dy = scr->height - (m->next->y + m->next->h);
-	    dx = dx<0?dx:0;
-	    dy = dy<0?dy:0;
-	    if (dx || dy) 
-	       feh_menu_slide_all_menus_relative(dx, dy);
-	 }
+         /* check if we are close to the right and/or the bottom edge of the
+          * screen. If so, and if the menu we are currently over is partially
+          * hidden, slide the menu to the left and/or up until it is
+          * fully visible */
+         if (mouseover_item
+             && ((scr->width - (ev->xmotion.x + m->x)) < 50
+                 || (scr->height - (ev->xmotion.y + m->y)) < 50))
+         {
+            dx = scr->width - (m->x + m->w);
+            dy = scr->height - (m->y + m->h);
+            dx = dx < 0 ? dx : 0;
+            dy = dy < 0 ? dy : 0;
+            if (dx || dy)
+               feh_menu_slide_all_menus_relative(dx, dy);
+         }
+         /* if a submenu is open we want to see that also */
+         if (mouseover_item && m->next
+             && ((scr->width - (ev->xmotion.x + m->next->x)) < 50
+                 || (scr->height - (ev->xmotion.y + m->next->y)) < 50))
+         {
+            dx = scr->width - (m->next->x + m->next->w);
+            dy = scr->height - (m->next->y + m->next->h);
+            dx = dx < 0 ? dx : 0;
+            dy = dy < 0 ? dy : 0;
+            if (dx || dy)
+               feh_menu_slide_all_menus_relative(dx, dy);
+         }
       }
    }
    else if (opt.mode == MODE_ZOOM)
